- displays a detailed list of available items  - displays details of a specific item
